fixing collapsing of the buttons for nearbyplaces

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,23 +1,94 @@
 @media screen and (max-width: 700px){
+	.search {
+		visibility: hidden;
+	}
+
+	.favorites-list {
+		flex-wrap: wrap;
+		width: 100%;
+		display: flex;
+	}
+
+	.nearby-places-list{
+		height: 100%;
+	}
+
+	.ignore-button {
+		margin-top: 0;
+		padding-top: 0;
+	    -ms-transform: scale(0.5, 0.5);
+	    -webkit-transform: scale(0.5, 0.5);
+	    transform: scale(0.5, 0.5);
+	}
+	
+
+	.master-list-container {		
+		height: 40vh;
+		width: 100%;
+		display: flex;
+	}
+
+	.map {
+		height: 60vh;
+		width: 100%;
+	}
+
+	.current-place {
+		width: 100%;
+	}
+
+	.current-place > div > ul {
+		display: flex;
+		flex-wrap: wrap;
+	}
+
+	.nearby-place {
+		text-align: center;
+		width: 50%;
+	}
+
+	.weather-container{
+		position: absolute;
+		right: 0;
+		width: 20%;
+		top: 0;
+	}
+
+	.temp {
+		position: absolute;
+		right: 0;
+		text-align: center;
+		font-size: 4em;
+
+	}
+
+	.show {
+
+	}
+
+	.show > a {
+		padding: 0px 5px 0px 5px;
+	}
+
+	.hide-when-small {
+		visibility: hidden;
+		display: none;
+	}
+}
+
+
+/*@media screen and (max-width: 700px){
 	.row {
 		
 	}
 
-	.master-list-container {		
-		min-height: 25%;
-		height: auto;
-		width: 100%;
-		display: flex;
-	}
-
 	.search {
 		visibility: hidden;
-		margin-top: auto;
 	}
-
 	.favorites-list {
 		width: 100%;
 		display: flex;
+		flex-wrap: wrap;
 	}
 
 	.nearby-places-list{
@@ -26,17 +97,13 @@
 	
 
 	.master-list-container {		
-		min-height: 25%;
-		max-height: 50%;
-		height: auto;
+		height: 30%;
 		width: 100%;
 		display: flex;
 	}
 
 	.map {
-		min-height: 50%;
-		max-height: 75%;
-		height: auto;
+		height: 70%;
 		width: 100%;
 	}
 
@@ -80,7 +147,7 @@
 		display: none;
 	}
 }
-
+*/
 @media screen and (min-width: 701px){
 	.row {
 		display: flex;
